--- a/date/2025-04/page-8.htm
+++ b/date/2025-04/page-8.htm
@@ -297,8 +297,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-101153.htm">哥本哈根减肥餐（哥本哈根减肥餐单）</a></h4>
-                <p>本文目录       哥本哈根食谱原版？  第一天   早餐：全麦面包1片、生姜红茶1杯、苹果1个     午餐：玉米200g、水煮蔬菜1份  晚餐：鸡肉200g、脱脂牛奶150g、水果1份    第</p>
+                <h4><a href="/free-nodes/2025-4-9-node-share-links.htm">4月9日更新21.7M/S，2025年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、加拿大、欧洲、新加坡、韩国、香港、美国等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -307,8 +307,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-87163.htm">Java ArrayList集合(Java动态数组)</a></h4>
-                <p>Java ArrayList集合（Java动态数组）  一、ArrayList集合的概述和基本使用   1.概述 2.基本使用   二、ArrayList集合的详细介绍   1.定义一个ArrayLi</p>
+                <h4><a href="/news/article-98281.htm">动物打疫苗前后要注意什么事项呢（动物接种疫苗前的准备）</a></h4>
+                <p>摘要：       今天给各位分享动物打疫苗前后要注意什么事项呢的知识，其中也会对动物接种疫苗前的准备进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗狗打疫.</p>
             </div>
         </div>
     </div>
@@ -317,8 +317,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-105981.htm">nginx进程管理</a></h4>
-                <p>nginx进程管理==&gt; master + 多个worker进程 master进程：全局的初始化 和管理 worker进程 worker进程：主要业务逻辑，事件处理 通信：socketpair </p>
+                <h4><a href="/news/article-90829.htm">猫咪怎么除跳蚤（猫咪除跳蚤项圈有用吗）</a></h4>
+                <p>摘要：       今天给各位分享猫咪怎么除跳蚤的知识，其中也会对猫咪除跳蚤项圈有用吗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、小猫猫身上总有跳蚤,洗完.</p>
             </div>
         </div>
     </div>
@@ -327,8 +327,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-99746.htm">宠物粮行业发展趋势分析报告（宠物粮行业发展趋势分析报告范文）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈宠物粮行业发展趋势分析报告，以及宠物粮行业发展趋势分析报告范文对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、你认为如今的宠物行业发展..</p>
+                <h4><a href="/news/article-94561.htm">动态指针时钟：利用pyqt5制作指针钟表显示实时时间</a></h4>
+                <p>【阅读全文】 文末附完整源代码实现过程... 想实现这样一个功能，然后pyqt5中又没有现成的组件可以使用，于是就想着只能通过绘图的方式来实现。说到绘图的话，turtle框架无疑是最常见的选择，但其实</p>
             </div>
         </div>
     </div>
@@ -337,8 +337,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-94562.htm">中文时间日期解析错误-UnicodeEncodeError: &#8216;locale&#8217; codec can&#8217;t encode character &#8216;\u5e74&#8217; in position 2: Illegal</a></h4>
-                <p>参考：https://segmentfault.com/q/1010000003070325 &nbsp; &nbsp; &nbsp; &nbsp;word = (datetime.today() +</p>
+                <h4><a href="/news/article-111015.htm">Java程序扩展给范围的数字</a></h4>
+                <p>如果给定范围，则要扩展String，Java代码如下- 示例 public&nbsp;class&nbsp;Demo&nbsp;{ &nbsp;&nbsp;&nbsp;public&nbsp;stat</p>
             </div>
         </div>
     </div>
@@ -347,8 +347,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-100539.htm">比熊犬专用狗粮推荐（比熊犬专用狗粮推荐一下）</a></h4>
-                <p>摘要：       今天给各位分享比熊犬专用狗粮推荐的知识，其中也会对比熊犬专用狗粮推荐一下进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、比熊吃什么狗粮比较.</p>
+                <h4><a href="/free-nodes/2025-4-23-free-ssr-node.htm">4月23日更新18.1M/S，2025年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、韩国、香港、日本、加拿大、新加坡等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -357,8 +357,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-95328.htm">属羊的人养猫对财运有好处吗（属羊的养猫好吗风水说法）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈属羊的人养猫对财运有好处吗，以及属羊的养猫好吗风水说法对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、家里养猫对财运好不好...     </p>
+                <h4><a href="/free-nodes/2025-5-4-free-clash-subscribe.htm">5月4日更新20.8M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、韩国、新加坡、美国、欧洲、加拿大、香港等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -367,8 +367,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-104179.htm">动物疫苗批号查询网站官网入口下载（动物疫苗2021）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物疫苗批号查询网站官网入口下载，以及动物疫苗2021对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、宠必威狂犬疫苗批号查询网站...  </p>
+                <h4><a href="/free-nodes/2025-4-26-clash-node-daily-updates.htm">4月26日更新21.8M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、加拿大、美国、新加坡、香港、欧洲、日本等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -377,8 +377,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-105977.htm">weak_ptr介绍</a></h4>
-                <p>本文转载于http://c.biancheng.net/view/7918.html   在C++98/03的基础上，C++11新标准引入了shared_ptr、unique_ptr以及weak_pt</p>
+                <h4><a href="/news/article-109328.htm">QT学习-08-Qt连接Sqllite数据库</a></h4>
+                <p>QT连接sqllite数据库  1.SQLlite简述： SQLite是一款开源轻量级的数据库软件，不需要server，可以集成在其他软件中，非常适合嵌入式系统。Qt5以上版本可以直接使用SQLite</p>
             </div>
         </div>
     </div>
@@ -387,8 +387,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-108473.htm">深圳宠物医院加盟连锁（宠物医院 深圳）</a></h4>
-                <p>摘要：       今天给各位分享深圳宠物医院加盟连锁的知识，其中也会对宠物医院 深圳进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、打听下珍斗宠物社区服务中.</p>
+                <h4><a href="/free-nodes/2025-5-2-clash-node-daily-updates.htm">5月2日更新21.3M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、新加坡、香港、欧洲、日本、加拿大、美国等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -399,7 +399,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
                                 <h4><span class="badge" style="float: right;">82</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                             </div>
         </div>
