--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -143,8 +143,68 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-105981.htm">nginx进程管理</a></h4>
-                <p>nginx进程管理==&gt; master + 多个worker进程 master进程：全局的初始化 和管理 worker进程 worker进程：主要业务逻辑，事件处理 通信：socketpair </p>
+                <h4><a href="/news/article-93802.htm">数据结构-图的遍历——DFS深度优先搜索_在线工具</a></h4>
+                <p>题目链接：https://www.dotcpp.com/oj/problem1702.html?sid=7509471&amp;lang=1#editor 模板题，dfs，dfs比bfs还简单，这个题</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-98280.htm">C语言数据结构、十字链表的分析及实现</a></h4>
+                <p>目录  前言 一、什么是十字链表 二、认识十字链表 1.十字链表的组成 2.顶点和弧的连接 三、代码逻辑实现 1.出度 &nbsp;2.入度 总结    &nbsp; 无论是什么程序都要和数据打交道，</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-98956.htm">SpringBoot如何整合spring-retry来实现接口请求重试</a></h4>
+                <p>一、重试机制 由于网络不稳定或网络抖动经常会造成接口请求失败的情况，当我们再去尝试就成功了，这就是重试机制。 本文首发于Java潘老师个人博客：SpringBoot整合spring-retry组件实现</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-105159.htm">瑞鹏宠物医院好不好（瑞鹏宠物医院大众点评）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈瑞鹏宠物医院好不好，以及瑞鹏宠物医院大众点评对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、新瑞鹏宠物医院怎么样?2、...       </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-92322.htm">关于Mina中IoBuffer与Java NIO中ByteBufferde的使用</a></h4>
+                <p>项目中大量的使用&nbsp;NIO&nbsp;和&nbsp;Mina，虽然之前一直对这部分比较关注，但是还没有好好的总结一下这方面的内容，本节内容介绍一下NIO&nbsp;里最基本的一个类&nbsp;</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-97508.htm">宠物领养软件下载免费 宠物领养软件下载免费大全</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物领养软件下载免费的问题，于是小编就整理了3个相关介绍宠物领养软件下载免费的解答，让我们一起看看吧。有没有专门养宠物的App手</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-4-26-clash-node-daily-updates.htm">4月26日更新21.8M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、加拿大、美国、新加坡、香港、欧洲、日本等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -163,48 +223,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-88623.htm">windows下安装redis_在线工具</a></h4>
-                <p>一、安装redis 下载地址： https://github.com/MicrosoftArchive/redis/releases Redis 支持 32 位和 64 位。这个需要根据你系统平台的实</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-92323.htm">动物疫苗知识大全图片（动物疫苗的了解）</a></h4>
-                <p>摘要：       今天给各位分享动物疫苗知识大全图片的知识，其中也会对动物疫苗的了解进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗狗打的预防针,国产的跟.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-86453.htm">哪里可以免费领养猫咪（哪里可以免费领养猫咪的猫）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈哪里可以免费领养猫咪，以及哪里可以免费领养猫咪的猫对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、哪里可以领养猫?2、...       </p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-106800.htm">如何在 C# 循环中捕获局部变量？</a></h4>
-                <p>问题： 我遇到了一个有趣的问题，它的代码大概是这样的。 List&lt;Func&lt;int&gt;&gt;&nbsp;actions&nbsp;=&nbsp;new&nbsp;List&lt;Fu</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-100538.htm">linux安装离线docker包教程,Centos7离线安装Docker</a></h4>
-                <p>工作原因需要在客户现场离线安装docker，网上看了很多，官方文档也查了一下，总结如下： (已在客户现场成功安装，Centos7，其他linux版本没试过，感觉应该问题不大) 1. 下载离线安装包 提</p>
+                <h4><a href="/news/article-93048.htm">宠物品牌起名字大全（宠物品牌介绍）</a></h4>
+                <p>摘要：       今天给各位分享宠物品牌起名字大全的知识，其中也会对宠物品牌介绍进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物店取什么名字好...   </p>
             </div>
         </div>
     </div>
@@ -219,33 +239,13 @@
         </div>
     </div>
 </div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-96083.htm">天宫院附近宠物医院有哪些（天宫院附近有什么好玩的）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈天宫院附近宠物医院有哪些，以及天宫院附近有什么好玩的对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、常州宠物医院2、...        </p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-1-free-v2ray.htm">4月1日更新18.2M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、日本、加拿大、欧洲、香港、新加坡、韩国等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
 
 <h3 class="title-big mb-sm-3 mb-3">归纳</h3>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
                                 <h4><span class="badge" style="float: right;">82</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                             </div>
         </div>
